# ussr

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.md
buf/: Cargo.toml
net/: Cargo.toml
protocol/protocol_macros/src/: lib.rs
protocol/src/: lib.rs
ussr/: Cargo.toml
ussr-buf/: Cargo.toml
ussr-buf/benches/: var.rs
ussr-buf/src/: async_decode.rs  async_encode.rs  decode.rs  encode.rs  io_ext.rs  lib.rs  read.rs  size.rs  write.rs
ussr-buf/ussr-buf-derive/: Cargo.toml
ussr-buf/ussr-buf-derive/src/: common.rs  decode.rs  encode.rs  lib.rs
ussr-nbt/: Cargo.toml  README.md
ussr-nbt/benches/: compare.rs  read.rs  swap_endian.rs  write.rs
ussr-nbt/examples/: borrow.rs  conversions.rs  owned.rs  try_into.rs
ussr-nbt/src/: endian.rs  lib.rs  main.rs  num.rs  swap_endian.rs
ussr-nbt/src/borrow/: compound.rs  impls.rs  list.rs  mod.rs  read_utils.rs  reader.rs  stack.rs  tag.rs  tape.rs  util.rs  writer.rs
ussr-nbt/src/mutf8/: borrow.rs  impls.rs  mod.rs  owned.rs
ussr-nbt/src/owned/: impls.rs  mod.rs  util.rs
ussr-nbt/tests/: test.rs  test_player.nbt
ussr-net/: Cargo.toml
ussr-net/src/: lib.rs  process_data.rs
ussr-net/src/handlers/: handshaking.rs  login.rs  mod.rs  status.rs
ussr-net/ussr-net-macros/: Cargo.toml
ussr-net/ussr-net-macros/src/: lib.rs
ussr-protocol/: Cargo.toml
ussr-protocol/protocol_macros/: Cargo.toml
ussr-protocol/src/: lib.rs  versions.rs
ussr-protocol/src/proto/: mod.rs
ussr-protocol/src/proto/v1_7_2/: enums.rs  mod.rs
ussr-protocol/src/proto/v1_7_2/packets/: handshaking.rs  login.rs  mod.rs  status.rs
ussr-protocol/src/v1_7_2/: enums.rs
ussr-protocol/src/v1_7_2/packets/: handshaking.rs  login.rs  mod.rs  play.rs  status.rs
ussr-protocol/src/versions/: mod.rs
ussr-protocol/src/versions/v1_7_2/: enums.rs
ussr-protocol/src/versions/v1_7_2/packets/: handshaking.rs  login.rs  mod.rs  status.rs
ussr-protocol/ussr-protocol-macros/: Cargo.toml
ussr-protocol/ussr-protocol-macros/src/: lib.rs
ussr/src/: init_tracing.rs  main.rs
