[workspace]
members = ["ussr", "ussr-buf", "ussr-nbt", "ussr-net", "ussr-protocol", "ussr-protocol/ussr-protocol-macros"]
resolver = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.size]
inherits = "release"
build-override.opt-level = "z"
opt-level = "z"
