[workspace]
members = [
    "ussr",
    "ussr-buf",
    "ussr-nbt",
    "ussr-net",
    "ussr-protocol",
    "ussr-protocol/ussr-protocol-macros",
]
resolver = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
incremental = false
strip = true
panic = "abort"

[profile.size]
inherits = "release"
build-override.opt-level = "z"
opt-level = "z"
