[package]
name = "ussr-buf"
version = "0.1.0"
edition = "2021"

[features]
async = ["futures-lite"]
derive = ["ussr-buf-derive"]

[dependencies]
byteorder = "1.5.0"
futures-lite = { version = "2.5.0", optional = true }
paste = "1.0.15"
thiserror = "2.0.8"
ussr-buf-derive = { version = "0.1.0", path = "ussr-buf-derive", optional = true }
ussr-nbt = { version = "0.2.1", path = "../ussr-nbt" }
uuid = "1.11.0"
