[package]
name = "ussr-nbt"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16.1", features = ["extern_crate_alloc"] }
byteorder = "1.5.0"
fastnbt = "2.5.0"
flate2 = "1.0.30"
paste = "1.0.15"
simd_cesu8 = "1.0.1"
# simdnbt = "0.6.0"
thiserror = "1.0.63"
zune-inflate = "0.2.54"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
