[package]
name = "ussr-nbt"
version = "0.2.1"
authors = ["TheAIguy_"]
edition = "2021"
description = "A very fast and versatile NBT library for Minecraft: Java Edition."
repository = "https://github.com/TheAIguy-dev/ussr"
license = "MIT"

[dependencies]
bytemuck = { version = "1.16.3", features = ["extern_crate_alloc"] }
byteorder = "1.5.0"
flate2 = "1.0.30"
paste = "1.0.15"
simd_cesu8 = "1.0.1"
thiserror = "1.0.63"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
flate2 = "1.0.30"
mimalloc = "0.1.43"
paste = "1.0.15"

azalea-nbt = { git = "https://github.com/azalea-rs/azalea", rev = "84e036ce3752ecf57904b0f5aff1f33d43e95a32" }
crab_nbt = "0.1.3"
fastnbt = { git = "https://github.com/owengage/fastnbt" }
golden_apple = "0.17.1"
graphite_binary = "0.1.0"
hematite-nbt = { version = "0.5.2", default-features = false }
quartz_nbt = "0.2.9"
shen-nbt5 = "0.4.6"
simdnbt = "0.6.0"
# ussr-nbt = { version = "0.2.1", default-features = false }
valence_nbt = { version = "0.8.0", features = ["binary"] }

[features]
default = ["rt_cpu_feat"]
rt_cpu_feat = []

[[bench]]
harness = false
name = "read"

[[bench]]
harness = false
name = "write"

[[bench]]
harness = false
name = "compare"

# [[bench]]
# harness = false
# name = "swap_endian"
