[package]
name = "ussr-net"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = { version = "0.15.0", default-features = false }
bevy_ecs = { version = "0.15.0", default-features = false, features = [
    "multi_threaded",
] }
bytes = "1.9.0"
tracing = "0.1.41"
ussr-buf = { version = "0.1.0", path = "../ussr-buf" }
ussr-protocol = { version = "0.1.0", path = "../ussr-protocol", features = ["async"]}
