[package]
name = "ussr-protocol"
version = "0.1.0"
edition = "2021"

[features]
default = ["v1_7_2"]
async = ["futures-lite", "ussr-buf/async"]
v1_7_2 = []

[dependencies]
byteorder = "1.5.0"
bytes = "1.9.0"
cfg-if = "1.0.0"
futures-lite = { version = "2.5.0", optional = true }
paste = "1.0.15"
strum_macros = "0.26.4"
thiserror = "2.0.8"
tracing = "0.1.41"
ussr-buf = { version = "0.1.0", path = "../ussr-buf", features = ["derive"] }
ussr-nbt = "0.2.1"
ussr-protocol-macros = { version = "0.1.0", path = "ussr-protocol-macros" }
uuid = "1.11.0"
